--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.7
   easy_stepper: ^0.7.3
+  auto_size_text: ^3.0.0
+  flutter_advanced_switch: ^3.0.1
+  rive: ^0.11.14
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +69,7 @@ flutter:
     - assets/featured/
     - assets/stores/
     - assets/logos/
+    - assets/entry/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
